methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (versLAvant) {
  ^